samples/_failures_safe/1761716134_08313b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf70551f.c: In function ‘main’:
./samples/SAFE/__tmp_bf70551f.c:147:5: error: expected declaration or statement at end of input
  147 |     printf("Longest consecutive error sequence: %d\n", max_error_sequence);
      |     ^~~~~~
